--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.4",
     "path": "^0.12.7",
+    "readme-md-generator": "^1.0.0",
     "router": "^1.3.8",
     "sequelize": "^6.31.0"
   },
